[gd_scene load_steps=22 format=2]

[ext_resource path="res://Algoritmos.gd" type="Script" id=1]
[ext_resource path="res://PacMan.gd" type="Script" id=2]
[ext_resource path="res://pacman.png" type="Texture" id=3]
[ext_resource path="res://RedGhost.gd" type="Script" id=4]
[ext_resource path="res://fantasma.png" type="Texture" id=5]
[ext_resource path="res://BlueGhost.gd" type="Script" id=6]
[ext_resource path="res://fantasma_2.png" type="Texture" id=7]
[ext_resource path="res://fantasma_3.png" type="Texture" id=8]
[ext_resource path="res://YellowGhost.gd" type="Script" id=9]
[ext_resource path="res://PinkGhost.gd" type="Script" id=10]
[ext_resource path="res://fantasma_4.png" type="Texture" id=11]
[ext_resource path="res://f2ktkjr.webp" type="Texture" id=12]
[ext_resource path="res://Maze.gd" type="Script" id=13]
[ext_resource path="res://fondo_transparente.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=7]
radius = 11.3137

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 12 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=8]
0/name = "fondo_transparente.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 9 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Mundo" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 299.5, 299.5 )
scale = Vector2( 0.739506, 1.1011 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="PacMan" type="KinematicBody2D" parent="."]
position = Vector2( 48, 560 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PacMan"]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="PacMan"]
scale = Vector2( 0.0746095, 0.0727005 )
texture = ExtResource( 3 )

[node name="Up" type="RayCast2D" parent="PacMan"]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -12 )

[node name="Down" type="RayCast2D" parent="PacMan"]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 12 )

[node name="Left" type="RayCast2D" parent="PacMan"]
enabled = true
exclude_parent = false
cast_to = Vector2( -12, 0 )

[node name="Right" type="RayCast2D" parent="PacMan"]
enabled = true
exclude_parent = false
cast_to = Vector2( 12, 0 )

[node name="RedGhost" type="KinematicBody2D" parent="."]
position = Vector2( 557, 48 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedGhost"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="RedGhost"]
enabled = true
exclude_parent = false
cast_to = Vector2( 50, 0 )

[node name="Sprite" type="Sprite" parent="RedGhost"]
scale = Vector2( 0.046875, 0.046875 )
texture = ExtResource( 5 )

[node name="BlueGhost" type="KinematicBody2D" parent="."]
position = Vector2( 44, 49 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueGhost"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="BlueGhost"]
scale = Vector2( 0.0700521, 0.0694445 )
texture = ExtResource( 7 )

[node name="YellowGhost" type="KinematicBody2D" parent="."]
position = Vector2( 149, 49 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="YellowGhost"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="YellowGhost"]
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 8 )

[node name="PinkGhost" type="KinematicBody2D" parent="."]
position = Vector2( 334, 49 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinkGhost"]
shape = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PinkGhost"]
position = Vector2( -0.500002, 0.499999 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 11 )

[node name="Maze" type="TileMap" parent="."]
modulate = Color( 0.65098, 0.0470588, 0.0470588, 1 )
self_modulate = Color( 0.431373, 0.00392157, 0.00392157, 1 )
tile_set = SubResource( 8 )
cell_size = Vector2( 26, 26 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 25, 0, 0, 65536, 0, 0, 65547, 0, 0, 65558, 0, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131083, 0, 0, 131086, 0, 0, 131087, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131094, 0, 0, 131097, 0, 0, 196608, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196619, 0, 0, 196622, 0, 0, 196623, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196630, 0, 0, 262144, 0, 0, 262166, 0, 0, 327680, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327686, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327696, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327702, 0, 0, 393216, 0, 0, 393222, 0, 0, 393227, 0, 0, 393232, 0, 0, 393238, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458763, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458777, 0, 0, 524292, 0, 0, 524294, 0, 0, 524304, 0, 0, 524306, 0, 0, 524313, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589830, 0, 0, 589840, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720902, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 786436, 0, 0, 786438, 0, 0, 786448, 0, 0, 786450, 0, 0, 851972, 0, 0, 851974, 0, 0, 851984, 0, 0, 851986, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917510, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 983040, 0, 0, 983051, 0, 0, 983062, 0, 0, 1048576, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048587, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048598, 0, 0, 1114112, 0, 0, 1114116, 0, 0, 1114130, 0, 0, 1114134, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179652, 0, 0, 1179654, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179664, 0, 0, 1179666, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1245184, 0, 0, 1245190, 0, 0, 1245195, 0, 0, 1245200, 0, 0, 1245206, 0, 0, 1310720, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310731, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310742, 0, 0, 1376256, 0, 0, 1376278, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0 )
script = ExtResource( 13 )
